Fix logo link z-index bug throughout pages

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -5,11 +5,12 @@
 }
 
 .about-logo {
+	backdrop-filter: blur(4px);
 	display: flex;
+	z-index: 999;
 	position: fixed;
 	top: 3vh;
 	border: 4px solid var(--transparent-white);
-	backdrop-filter: blur(4px);
 	border-radius: 50%;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -76,8 +77,8 @@
 	}
 
 	.about-right-side {
-		order: 1;
 		align-items: center;
+		order: 1;
 	}
 
 	.about-left-side {
@@ -98,8 +99,8 @@
 		padding-top: 25px;
 	}
 	.about-image-container {
-		padding-top: 75px;
 		max-width: 100%;
+		padding-top: 75px;
 	}
 
 	.about-logo-container {
